--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     },
     "dependencies": {
         "element-ui": "1.4.13",
+        "mongoose": "^4.10.8",
         "nprogress": "0.2.0",
         "vue": "2.5.2",
         "vue-router": "3.0.1"
